--- a/GAME1007_W05_Framework/GAME1007_W05_Framework.vcxproj
+++ b/GAME1007_W05_Framework/GAME1007_W05_Framework.vcxproj
@@ -24,7 +24,6 @@
     <ProjectGuid>{eeb103f7-256b-498f-9449-51103d37efec}</ProjectGuid>
     <RootNamespace>GAME1007W05Framework</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>LE1_SoleimayAmirmohammad</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -142,19 +141,39 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Engine.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="StateManager.cpp" />
-    <ClCompile Include="States.cpp" />
+    <Image Include="..\Assets\img\Enemies.png" />
+    <Image Include="..\Assets\img\Turret.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bullet.h" />
+    <ClInclude Include="CollisionManager.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="EventManager.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="MathManager.h" />
+    <ClInclude Include="RenderManager.h" />
     <ClInclude Include="StateManager.h" />
     <ClInclude Include="States.h" />
+    <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="tinyxml2.h" />
+    <ClInclude Include="Turret.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\Assets\img\background.png" />
-    <Image Include="..\Assets\img\ship.png" />
+    <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="CollisionManager.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="EventManager.cpp" />
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MathManager.cpp" />
+    <ClCompile Include="RenderManager.cpp" />
+    <ClCompile Include="StateManager.cpp" />
+    <ClCompile Include="States.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
+    <ClCompile Include="tinyxml2.cpp" />
+    <ClCompile Include="Turret.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
